syntax = "proto3";

package evm.erc721.events.v1;

message Events {
  repeated Transfer transfers = 2;
  repeated Transaction transactions = 4;
}

message Transfer {
  // Block number for the transfer event
  uint64 block_num = 2;

  // The transaction hash that generated that transfer.
  bytes tx_hash = 3;

  // The index of the log within the transaction's receipts of the block.
  uint64 log_index = 4;

  // The contract address of the token.
  bytes contract = 5;

  // The person that sent the transfer.
  bytes from = 6;

  // The person that received the transfer.
  bytes to = 7;

  // TokenID the identifier of the token for which the transfer is happening.
  string token_id = 8;

  // URI of the token.
  optional string uri = 9;

  // Symbol of the token.
  optional string symbol = 10;

  // Name of the token.
  optional string name = 11;
}

message Transaction {
  uint64 block_number = 1;
  uint64 block_timestamp = 2;
  bytes block_hash = 3;
  uint32 position = 4;
  bytes tx_hash = 5;
  uint64 nonce = 6;
  bytes from_address = 7;
  bytes to_address = 8;
  string value = 9;
  string tx_fee = 10;
  string gas_price = 11;
  uint64 gas_limit = 12;
  uint64 gas_used = 13;
  uint64 cumulative_gas_used = 14;
  string max_fee_per_gas = 15;
  string max_priority_fee_per_gas = 16;
  bytes input = 17;
  int32 type = 18;
  bytes v = 19;
  bytes r = 20;
  bytes s = 21;
}
